SERVER-91193 Disable timeseriesBucketingParametersHaveChanged feature flag (#23003)

GitOrigin-RevId: ed4a2b6c56e134b27107dcb13a9cdfbc2feed12e