jstests/core/timeseries/timeseries_update_delete_fixed_bucket.js
@@ -7,6 +7,7 @@
  *   # We need a timeseries collection.
  *   requires_timeseries,
  *   featureFlagTimeseriesUpdatesSupport,
+ *   featureFlagTSBucketingParametersUnchanged,
  *  # TODO SERVER-76583: Remove following two tags.
  *   does_not_support_retryable_writes,
  *   requires_non_retryable_writes,
